# REIT-Python-Package-Template

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  GITLAB-PYPI.md  LICENSE  README.md  add-template-to-precommit.py  copier-answers-example.yml  copier.yml  pyproject.toml  update-versions-in-template.py  yamlfix-config.toml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml
.gitlab/workflows/: ci.yml  deploy_docs.yml  pre-commit-autoupdate.yml  prek-auto-update.yml  prek-autoupdate.yml  render-precommit.py  test-project-generation.yml  test_code.yml
docs/: index.md
extensions/: context.py
project_template/: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  CITATION.cff.jinja  README.md  README.md.jinja  mkdocs.yml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja  {% if environment_manager=='uv' %}.python-version{% endif %}  {% if environment_manager=='uv' %}.python-version{% endif %}.jinja  {% if host!='github.com' %}.gitlab-ci.yml{% endif %}  {% if host!='github.com' %}.gitlab-ci.yml{% endif %}.jinja  {% if license=='No license' %}LICENSE{% endif %}.jinja
project_template/docs/: index.md  index.md.jinja
project_template/src/{{python_name}}/: __init__.py  __init__.py.jinja  main.py  main.py.jinja
project_template/tests/: test_main.py  test_my_module.py
project_template/{% if host!='github.com' %}.gitlab{% endif %}/workflows/: deploy_docs.yml  deploy_docs.yml.jinja  test_code.yml  test_code.yml.jinja
project_template/{% if host=='github.com' %}.github{% endif %}/workflows/: deploy_docs.yml  deploy_docs.yml.jinja  test_code.yaml  test_code.yaml.jinja  test_code.yml.jinja
src/python_template_pixi_example/: __init__.py  main.py
src/python_template_uv_example/: __init__.py  main.py
tests/: test_main.py
