[project]
name = "{{ project_name }}"
dynamic = ["version"]
authors = [
  { name = "{{ full_name }}", email = "{{ email }}" },
]
description = "{{ project_short_description }}"
readme = "README.md"
requires-python = ">={{ min_python_version }}"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
{%- if license == "BSD" %}
  "License :: OSI Approved :: BSD License",
{%- elif license == "Apache" %}
  "License :: OSI Approved :: Apache Software License",
{%- elif license == "MIT" %}
  "License :: OSI Approved :: MIT License",
{%- elif license == "GPL" %}
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
{%- endif %}
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
{%- if typing != "no_typing" %}
  "Typing :: Typed",
{%- endif %}
]
dependencies = []
{% if environment_manager=='pixi' %}
[project.optional-dependencies]
dev = [
{%- elif environment_manager=='uv' %}
[tool.uv]
dev-dependencies = [
{%- endif %}
  "pytest>=8.3.3,<9",
  "pytest-cov>=5.0.0,<6",
  "pre-commit>=3.8.0,<4",
  "mkdocstrings[python]>=0.26.1,<1.0",
  "mkdocs-material>=9.5.39,<10.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project.urls]
Homepage = "{{ url }}"

[project.scripts]
main_script = "{{ python_name }}.main:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.coverage]
run.source = ["{{ python_name }}"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

{% if typing != "no_typing" -%}
[tool.mypy]
files = ["src", "tests"]
python_version = "{{ min_python_version }}"
show_error_codes = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
{% if typing == "loose" -%}
strict = false
{% elif typing == "strict" -%}
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "{{ python_name }}.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
{%- endif %}
{%- endif %}

[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be, 88 is black's default

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.lint]
# For more strict linting and code simplifications, replace this with
# https://github.com/NLeSC/python-template/blob/main/template/pyproject.toml.jinja#L121-L136
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  # "D",           # pydocstyle, uncomment to have the docstrings linted
  # "ANN",         # flake8-annotations, uncomment to have type hint annotations linted
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "D103",   # Missing docstring
    "S101",   # Use of assert is detected
    "INP001", # Missing __init__.py file
]
